fix(styles home) change width value of accountingbalance to prevent overflow

--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -1,5 +1,5 @@
 .accounting-balance {
-  width: max-content;
+  width: fit-content;
   margin: 1em auto;
   font-size: 1em;
   font-family: monospace;
